@@ -7,15 +7,13 @@ import com.telran.store.mapper.ShopUserMapper;
 import com.telran.store.service.ShopUserService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.test.web.servlet.MockMvc;
 
-import static org.mockito.ArgumentMatchers.eq;
-
-
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -25,6 +23,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+@AutoConfigureMockMvc(addFilters = false)
 @WebMvcTest(ShopUserController.class)
 class ShopUserControllerTest {
 
@@ -37,56 +36,61 @@ class ShopUserControllerTest {
     @MockBean
     private ShopUserMapper shopUserMapper;
 
+    @MockBean
+    private PasswordEncoder passwordEncoder;
+
+
     @Test
     void testGetAllUsers() throws Exception {
-        List<ShopUser> shopUsers = Arrays.asList(
-                ShopUser.builder()
-                        .id(1L).name("Alex").email("alex@gmail.com").phoneNumber("111222").build(),
-                ShopUser.builder()
-                        .id(2L).name("Max").email("max@gmail.com").phoneNumber("333444").build());
-        List<ShopUserResponseDto> shopUserResponseDtos = shopUsers.stream()
-                .map(shopUser -> new ShopUserResponseDto(shopUser.getId(),
-                        shopUser.getName(), shopUser.getEmail(), shopUser.getPhoneNumber()))
+        List<ShopUser> shopUsers = List.of(
+                ShopUser.builder().id(1L).name("Alex").email("alex@gmail.com").phoneNumber("111222").build(),
+                ShopUser.builder().id(2L).name("Max").email("max@gmail.com").phoneNumber("333444").build()
+        );
+        List<ShopUserResponseDto> responseDtos = shopUsers.stream()
+                .map(user -> new ShopUserResponseDto(user.getId(), user.getName(), user.getEmail(), user.getPhoneNumber()))
                 .toList();
 
         when(shopUserService.getAll()).thenReturn(shopUsers);
-        when(shopUserMapper.toDtoList(any())).thenReturn(shopUserResponseDtos);
+        when(shopUserMapper.toDtoList(shopUsers)).thenReturn(responseDtos);
 
         mockMvc.perform(get("/users"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id").value(1))
-                .andReturn()
-                .getResponse()
-                .getContentAsString();
+                .andExpect(jsonPath("$[1].id").value(2));
     }
 
     @Test
     void testGetUserById() throws Exception {
-        ShopUser shopUser = ShopUser.builder().id(1L).name("Alex").email("alex@gmail.com").phoneNumber("111222").build();
-        ShopUserResponseDto shopUserDto = new ShopUserResponseDto(1L, "Alex", "alex@gmail.com", "111222");
+        long userId = 1L;
+        ShopUser shopUser = ShopUser.builder()
+                .id(userId)
+                .name("Alex")
+                .email("alex@gmail.com")
+                .phoneNumber("111222")
+                .build();
 
-        when(shopUserService.getById(shopUser.getId())).thenReturn(shopUser);
-        when(shopUserMapper.toDto(any())).thenReturn(shopUserDto);
+        ShopUserResponseDto dto = new ShopUserResponseDto(userId, "Alex", "alex@gmail.com", "111222");
 
-        mockMvc.perform(get("/users/" + shopUser.getId()))
+        when(shopUserService.getById(userId)).thenReturn(shopUser);
+        when(shopUserMapper.toDto(shopUser)).thenReturn(dto);
+
+        mockMvc.perform(get("/users/{id}", userId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(shopUser.getId()))
-                .andReturn()
-                .getResponse()
-                .getContentAsString();
+                .andExpect(jsonPath("$.id").value(userId))
+                .andExpect(jsonPath("$.name").value("Alex"))
+                .andExpect(jsonPath("$.email").value("alex@gmail.com"))
+                .andExpect(jsonPath("$.phoneNumber").value("111222"));
+
+        verify(shopUserService).getById(userId);
+        verify(shopUserMapper).toDto(shopUser);
     }
 
     @Test
     void testDeleteUserById() throws Exception {
-        ShopUser shopUser = ShopUser.builder().id(1L).name("Alex").email("alex@gmail.com").phoneNumber("111222").build();
+        doNothing().when(shopUserService).deleteById(1L);
 
-        doNothing().when(shopUserService).deleteById(shopUser.getId());
-
-        mockMvc.perform(delete("/users/" + shopUser.getId()))
-                .andExpect(status().isOk())
-                .andReturn()
-                .getResponse()
-                .getContentAsString();
+        mockMvc.perform(delete("/users/1"))
+                .andExpect(status().isOk());
     }
 
     @Test
@@ -112,18 +116,15 @@ class ShopUserControllerTest {
         ShopUserCreateDto shopUserCreateDto = new ShopUserCreateDto();
         shopUserCreateDto.setName("Alex");
 
-        when(shopUserService.edit(eq(1L), any(ShopUserCreateDto.class))).thenReturn(shopUser);
+        when(shopUserService.edit(any())).thenReturn(shopUser);
         when(shopUserMapper.toDto(shopUser)).thenReturn(new ShopUserResponseDto());
 
-        mockMvc.perform(patch("/users/" + shopUser.getId())
+        mockMvc.perform(patch("/users")
                         .contentType(MediaType.APPLICATION_JSON_VALUE)
                         .content("{\"name\": \"Alex\", \"email\": \"max@gmail.com\", \"phoneNumber\": \"44445555666\"}"))
                 .andExpect(status().isCreated())
                 .andReturn()
                 .getResponse()
                 .getContentAsString();
-
-        verify(shopUserService).edit(eq(1L), any(ShopUserCreateDto.class));
-        verify(shopUserMapper).toDto(shopUser);
     }
 }
